--- a/css/styles.css
+++ b/css/styles.css
@@ -138,16 +138,36 @@ p {
 /* ===============END HEADER==============*/
 
 /* ===============HERO==============*/
+
+.hero-area {
+  background-color: #2f303a;
+  text-align: center;
+}
+
 .hero-title {
+  margin: auto;
+  padding-top: 200px;
+  margin-bottom: 30px;
+}
+
+.hero-title {
+  width: 696px;
   font-weight: 900;
   font-size: 44px;
   line-height: 1.36;
   letter-spacing: 0.06em;
   text-transform: uppercase;
-
-  /* color: #fffff; */
+  color: #ffffff;
 }
+
 .hero-btn {
+  margin-bottom: 200px;
+}
+
+.hero-btn {
+  border-radius: 4px;
+  border-color: var(--btm-color);
+
   font-weight: bold;
   font-size: 16px;
   line-height: 1.87;
