--- a/css/styles.css
+++ b/css/styles.css
@@ -243,6 +243,39 @@ p {
 /* ===============END ABOUT==============*/
 /* ===============TEAM==============*/
 .team {
+  padding-bottom: 94px;
+  background-color: #f5f4fa;
+}
+
+.team-title {
+  text-align: center;
+  padding-top: 94px;
+  padding-bottom: 50px;
+}
+.team-list {
+  display: flex;
+  flex-wrap: wrap;
+  margin-right: -30px;
+  margin-top: -50px;
+  padding-left: 0px;
+  margin-bottom: 0px;
+}
+
+.team-info {
+  flex-basis: calc((100% / 4) - 30px);
+  margin-right: 30px;
+  margin-top: 50px;
+
+  width: 270px;
+  height: 368px;
+  background-color: #ffffff;
+  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
+    0px 2px 1px rgba(0, 0, 0, 0.2);
+  border-radius: 0px 0px 4px 4px;
+}
+.team-info-container {
+  padding-top: 30px;
+  text-align: center;
 }
 
 .team-developer {
@@ -256,6 +289,9 @@ p {
   line-height: 1.19px;
   letter-spacing: 0.03em;
   color: #757575;
+
+  margin-bottom: 30px;
+  margin-top: 10px;
 }
 /* ===============END TEAM==============*/
 /* ===============FOOTER==============*/
