--- a/css/styles.css
+++ b/css/styles.css
@@ -345,6 +345,21 @@ p {
 /* ===============PORTFOLIO==============*/
 
 /* ===============BUTTONS==============*/
+
+.buttons-list {
+  display: flex;
+  justify-content: center;
+  margin-top: 94px;
+  margin-bottom: 0px;
+  padding: 0px;
+}
+
+.buttons-item:not(:last-child) {
+  margin-right: 8px;
+}
+.buttions-item {
+}
+
 .buttons-link {
   font-weight: 500;
   font-size: 16px;
@@ -352,6 +367,8 @@ p {
   letter-spacing: 0.03em;
   background-color: #f5f4fa;
   cursor: pointer;
+  border-radius: 4px;
+  border-color: #f5f4fa;
 }
 .buttons-link:hover,
 .buttons-link:focus {
@@ -362,13 +379,40 @@ p {
 /* ===============END BUTTONS==============*/
 
 /* ===============CATEGORY==============*/
+.category-list {
+  margin-top: 20px;
+  margin-bottom: 94px;
+  display: flex;
+  flex-wrap: wrap;
+  padding: 0;
+}
+
+.category-items {
+  flex-basis: calc((100%-30px) / 3);
+
+  background: #ffffff;
+  border: 1px solid #eeeeee;
+  box-sizing: border-box;
+
+  margin-top: 30px;
+}
+/*.category-container {
+}*/
+
 .category-title {
+  margin-top: 20px;
+  margin-left: 24px;
+
   font-weight: bold;
   font-size: 18px;
   line-height: 36px;
   letter-spacing: 0.06em;
 }
 .category-name {
+  margin-top: 4px;
+  margin-left: 24px;
+  margin-bottom: 20px;
+
   font-size: 16px;
   line-height: 1.87;
   letter-spacing: 0.03em;
