--- a/css/styles.css
+++ b/css/styles.css
@@ -386,8 +386,10 @@ p {
 /* ===============CATEGORY==============*/
 
 .category-list {
-  margin-top: 20px;
+  margin-top: 50px;
   margin-bottom: 94px;
+  padding-right: -30px;
+
   display: flex;
   flex-wrap: wrap;
   padding: 0;
@@ -399,13 +401,11 @@ p {
   background: #ffffff;
   border: 1px solid #eeeeee;
   box-sizing: border-box;
-
-  margin-top: 30px;
 }
 
 .category-title {
   margin-top: 20px;
-  margin-left: 24px;
+  padding-left: 24px;
 
   font-weight: bold;
   font-size: 18px;
@@ -414,7 +414,7 @@ p {
 }
 .category-name {
   margin-top: 4px;
-  margin-left: 24px;
+  padding-left: 24px;
   margin-bottom: 20px;
 
   font-size: 16px;
